Version 1.2 (unreleased)

* In kernels that do not distinguish between hw 
accelerated ciphers or not set the SIOP_FLAG_KERNEL_DRIVER_ONLY
flag unconditionally.

* camelia was renamed to camellia.

* Added COP_FLAG_RESET to allow resetting the state
in multi-update.


Version 1.1 (released 2012-02-20)

* Fixed alignment issue in speed.c

* Defined HASH_MAX_LEN is cryptodev.h

* CIOCGSESSINFO ioctl() sets the SIOP_FLAG_KERNEL_DRIVER_ONLY 
flag if the driver is only available through kernel
driver (and is not just software cipher).

* Added new encryption ioctl, CIOCAUTHCRYPT, which
combines authentication and encryption. Operates
in AEAD, TLS and SRTP modes (the API might change
in later versions).


Version 1.0 (released 2011-04-12)

* Several fixes in the included examples. Based on
patches by Vladimir Zapolskiy.

Version 0.9 (released 2011-02-11)

* Added additional test tools:
  - sha_speed does performance testing of SHA1 and SHA256
  - hashcrypt_speed additionally encrypts with AES128 and AES256

* Allow updating the IV in userspace via the COP_FLAG_WRITE_IV
flag.

* Export the alignmask in an OCF compatible way.

* Fix for kernel crash on passing incorrect session ID.

* Added CIOCGSESSINFO to export additional information
for each session.

Version 0.8 (released 2010-11-06)

* Made cryptodev aware of alignment constraints.

* Added support for CRYPTO_AES_ECB.

* Added asynchronous operation support using
  CIOCASYNCCRYPT, CIOCASYNCFETCH ioctls and poll().

Version 0.7 (released 2010-10-08)

* Added COP_FLAG_FINAL to make multi-update
more efficient.

* Added CRIOGET_NOT_NEEDED definition to allow
users of the API to distinguish from the bare
OpenBSD API that requires the CRIOGET.

Version 0.6 (released 2010-09-16)

* multi-update support for hash calculation using
the new flag COP_FLAG_UPDATE.

* Relicensed under GPLv2.

* Added AES-CTR.

* Corrected fallback to non-zero copy when referenced
pages were not writable.

Version 0.5 (released 2010-07-06)
